Implemented update user.

--- a/TestInnocv/Resources/en.lproj/Localizable.strings
+++ b/TestInnocv/Resources/en.lproj/Localizable.strings
@@ -1,4 +1,10 @@
 // MARK: - General
-"app.innocv.users.users_title" = "Users";
-"app.innocv.users.users_empty" = "There are no users";
-"app.innocv.users.users_searching_placeholder" = "Introduce name...";
+"app.innocv.users_title" = "Users";
+"app.innocv.users_empty" = "There are no users";
+"app.innocv.users_searching_placeholder" = "Introduce name...";
+"app.innocv.add" = "Add";
+"app.innocv.update" = "Update";
+"app.innocv.name" = "Name";
+"app.innocv.introduce_name" = "Introduce name...";
+"app.innocv.birthday" = "Birthday";
+"app.innocv.introduce_birthday" = "Introduce birthday...";
