Implemented add and update user

--- a/TestInnocv/Resources/en.lproj/Localizable.strings
+++ b/TestInnocv/Resources/en.lproj/Localizable.strings
@@ -8,3 +8,12 @@
 "app.innocv.introduce_name" = "Introduce name...";
 "app.innocv.birthday" = "Birthday";
 "app.innocv.introduce_birthday" = "Introduce birthday...";
+"app.innocv.cancel" = "Cancel";
+"app.innocv.done" = "Done";
+"app.innocv.cancel_new_user_title" = "Cancel new user";
+"app.innocv.cancel_new_user_message" = "Do you want to cancel the creation of the new user?";
+"app.innocv.yes" = "Yes";
+"app.innocv.no" = "No";
+"app.innocv.warning" = "Warning";
+"app.innocv.must_fill_red_fields" = "You must fill in the fields in red";
+"app.innocv.accept" = "Accept";
