--- a/TestInnocv/Resources/es.lproj/Localizable.strings
+++ b/TestInnocv/Resources/es.lproj/Localizable.strings
@@ -8,3 +8,12 @@
 "app.innocv.introduce_name" = "Introduzca nombre...";
 "app.innocv.birthday" = "Fecha de nacimiento";
 "app.innocv.introduce_birthday" = "Introduzca fecha de nacimiento...";
+"app.innocv.cancel" = "Cancelar";
+"app.innocv.done" = "Hecho";
+"app.innocv.cancel_new_user_title" = "Cancelar nuevo usuario";
+"app.innocv.cancel_new_user_message" = "¿Desea cancelar la creación del nuevo usuario?";
+"app.innocv.yes" = "Sí";
+"app.innocv.no" = "No";
+"app.innocv.warning" = "Atención";
+"app.innocv.must_fill_red_fields" = "Debe rellenar los campos en rojo";
+"app.innocv.accept" = "Aceptar";
